deploy/node-service-k8s/02-node-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service
  namespace: kube-system
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      containers:
        - name: node-service
          image: DOCKER_REGISTRY/linera/node-service:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: workdir
              mountPath: /root/linera-project
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: workdir
          persistentVolumeClaim:
            claimName: node-service-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 30080
      targetPort: 30080
  selector:
    app: node-service
