deploy/node-service-k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-service-traefik-app-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: node-service-traefik-app
    k8s.kuboard.cn/workload: node-service-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-node-service-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: node-service.hk-testnet.linerameme.fun
      http: &http_rules
        paths:
          - path: /rpc
            backend:
              serviceName: node-service
              servicePort: 30080

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: node-service-h2c-traefik-app-ingress
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/protocol: h2c
    k8s.kuboard.cn/displayName: node-service-h2c-traefik-app
    k8s.kuboard.cn/workload: node-service-h2c-traefik-app
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-common-headers@kubernetescrd

spec:
  rules:
    - host: node-service.hk-testnet.linerameme.fun
      http: &http_rules
        paths:
          - path: /ws
            backend:
              serviceName: node-service
              servicePort: 30080
